RESOLVED FIXED 49561
ASSERTION (r72003): Assertion failure when running layout tests
https://bugs.webkit.org/show_bug.cgi?id=49561
Summary ASSERTION (r72003): Assertion failure when running layout tests
Anders Carlsson
Reported 2010-11-15 13:30:11 PST
ASSERTION (r72003): Assertion failure when running layout tests
Attachments
Patch (2.64 KB, patch)
2010-11-15 13:32 PST, Anders Carlsson
dglazkov: review+
Anders Carlsson
Comment 1 2010-11-15 13:32:50 PST
Dimitri Glazkov (Google)
Comment 2 2010-11-15 13:44:31 PST
Comment on attachment 73928 [details] Patch doh.
Darin Adler
Comment 3 2010-11-15 13:48:19 PST
*** Bug 49562 has been marked as a duplicate of this bug. ***
Andy Estes
Comment 4 2010-11-15 13:54:29 PST
I skipped fast/forms/submit-form-attributes.html in http://trac.webkit.org/changeset/72035. I'll un-skip it when this lands.
Anders Carlsson
Comment 5 2010-11-15 14:15:06 PST
Andy Estes
Comment 6 2010-11-15 15:35:51 PST
Unskipped fast/forms/submit-form-attributes.html in http://trac.webkit.org/changeset/72044.
Dai Mikurube
Comment 7 2010-11-15 19:35:19 PST
I was not aware of isURLAttribute. Thank you for the patch.
Note You need to log in before you can comment on or make changes to this bug.