ASSERTION (r72003): Assertion failure when running layout tests https://bugs.webkit.org/show_bug.cgi?id=49561

Reviewed by Dimitri Glazkov.

r72003 added the 'formaction' URL attribute to HTMLButtonElement and HTMLInputElement,
but did not add the attribute to the isURLAttribute which lead to assertion failures
when running the layout tests with a debug build.

* html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::isURLAttribute):
* html/HTMLButtonElement.h:
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isURLAttribute):

Canonical link: https://commits.webkit.org/62508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72038 268f45cc-cd09-0410-ab3c-d52691b4dbfc