WebCore/html/HTMLButtonElement.cpp
@@ -170,6 +170,11 @@ void HTMLButtonElement::accessKeyAction(bool sendToAnyElement)
     dispatchSimulatedClick(0, sendToAnyElement);
 }
 
+bool HTMLButtonElement::isURLAttribute(Attribute* attr) const
+{
+    return attr->name() == formactionAttr;
+}
+
 String HTMLButtonElement::value() const
 {
     return getAttribute(valueAttr);
