WebCore/html/HTMLButtonElement.h
@@ -54,6 +54,7 @@ private:
     virtual void setActivatedSubmit(bool flag);
 
     virtual void accessKeyAction(bool sendToAnyElement);
+    virtual bool isURLAttribute(Attribute*) const;
 
     virtual bool canStartSelection() const { return false; }
 
